# KN-IMS

./: .dockerignore  .gitignore  LICENSE  README.md  gen_certs.sh  set.md  setup.md  setup_backend_agent_runtime.sh
Agent/: CMakeLists.txt  LICENSE  README.md  fileguard.service  integrityguard.service
Agent/.github/workflows/: agent-ci.yml
Agent/configs/: agent.yaml  fim.conf  fim.env  fim_monitor.service  ig.conf  ig.env  ig_monitor.service  im.conf  im_monitor.service
Agent/scripts/: bench_agent.sh  bench_fim_agent.sh  install_agent_service.sh  setup_ebpf_deps.sh  setup_lkm_env.sh
Agent/src/: fim_config.c  fim_queue.c  ig_config.c  ig_queue.c  im_config.c  im_queue.c  main.c  scan_state.c  scan_state.h
Agent/src/core/: CMakeLists.txt  daemon.c  daemon.h  event_loop.c  event_loop.h  pid_lock.c  pid_lock.h
Agent/src/ebpf/: Makefile  README.md  fim_trace.bpf.c  fim_trace.c  fim_trace.skel.h  fim_trace_api.h  ig_trace.bpf.c  ig_trace.c  ig_trace.skel.h  ig_trace_api.h  im_trace.bpf.c  im_trace.c  im_trace_api.h
Agent/src/enroll/: enroll.c  enroll.h
Agent/src/lkm/: Makefile  README.md  fim_lkm_chardev.c  fim_lkm_common.h  fim_lkm_events.c  fim_lkm_events.h  fim_lkm_hooks.c  fim_lkm_main.c  fim_lkm_policy.c  fim_lkm_policy.h  ig_lkm_chardev.c  ig_lkm_common.h  ig_lkm_events.c  ig_lkm_events.h  ig_lkm_main.c  ig_lkm_policy.c  ig_lkm_policy.h  ig_lkm_proc_cache.c  ig_lkm_proc_cache.h  im_lkm_chardev.c  im_lkm_common.h  im_lkm_events.c  im_lkm_events.h  im_lkm_main.c  im_lkm_policy.c  im_lkm_policy.h  lkm_client.c  lkm_client.h
Agent/src/lkm/hooks/: lkm310.c  lkm415.c  lkm417_syscall.c  lkm42.c
Agent/src/realtime/: fanotify_mon.c  inotify_mon.c  monitor.h
Agent/src/scanner/: baseline.c  baseline.h  periodic.c  periodic.h  pid_ancestry.c  pid_ancestry.h  vault.c  vault.h  walker.c  walker.h
Agent/src/transport/: grpc_client.c  heartbeat.c  heartbeat.h  protocol.c  protocol.h  tcp_client.c  tcp_client.h  test_transport.c  tls_context.c  tls_context.h
Backend/: .env.example  API_DOCUMENTATION.md  README.md  go.mod  go.sum
Backend/cmd/enroll-token/: main.go
Backend/cmd/server/: main.go
Backend/internal/: errors.go  interfaces.go
Backend/internal/api/: agent_handler.go  alert_handler.go  auth.go  auth_handler.go  command_handler.go  event_handler.go  middleware.go  server.go  sse.go
Backend/internal/collector/: agent_session.go  protocol.go  protocol_test.go  tcp_server.go  tls_config.go
Backend/internal/config/: env.go
Backend/internal/engine/: event_processor.go  event_processor_test.go
Backend/internal/enrollment/: cert_issuer.go  key_vault.go  protocol.go  secret.go  server.go  service.go  xor_crypto.go
Backend/internal/store/: agent_store.go  alert_store.go  auth_store.go  db.go  enrollment_store.go  event_store.go  file_store.go  scan_store.go  schema.sql  user_store.go
Backend/internal/store/migrations/: 20260518_file_event_payload.sql  20260518_xor_enrollment.sql
Frontend/: README.md  tailwind.config.js
Frontend/desktop/: package-lock.json
Frontend/desktop/src/: index.html
Frontend/desktop/src-tauri/: tauri.conf.json
Frontend/desktop/src-tauri/icons/: icon.icns
Frontend/desktop/src-tauri/src/: lib.rs
Frontend/public/: config.js  index.html  login.html
Frontend/public/assets/: tailwind.css
Frontend/public/js/: api.js  app.js  auth.js  ui.js  window-size.js
docker/backend-runtime-test/: Dockerfile  start.sh
docs/: troubleshooting.md
scripts/setup_backend_agent_runtime/: certs.sh  modules.sh  vm_sync.sh
setup/: setup.md  setup_agent.sh  setup_backend.sh
